[project]
name = "Denoising_AutoEncoder"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "free", email = "free"},
]
dependencies = ["jupyterlab>=4.3.6", "notebook>=7.3.3", "matplotlib==3.10.1", "tensorflow==2.16.1", "tensorflow-intel==2.16.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "free"}


[tool.pdm]
distribution = false
